--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio de Yulia Monti, Desarrolladora Web FullStack, FrontEnd y BackEnd">
-    <meta name="keywords" content="desarrollo web, developer, full stack, FrontEnd, Backend, react, javascript, nodejs, php, wordpress, bootstrap, git, github, mysql, firebase, figma">
+    <meta name="description" content="Portfolio de Yulia Monti, Diseñadora y Desarrolladora Web Front End">
+    <meta name="keywords"
+        content="desarrollo web, developer, full stack, frontEnd, backend, react, javascript, nodejs, php, wordpress, bootstrap, git, github, mysql, firebase, figma, developer web, developer website, developer web full stack, developer web junior, developer web portfolio">
     <title>Yulia Monti</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,72 +20,74 @@
 
 <body>
     <header>
-        <div class="titulo-yulia">
-            <h1 data-aos="zoom-in" class="titulo-yulia"> Yulia Monti
-                <span class="titulo contenedor animate__animated animate__backInRight"> Web Developer</span>
-            </h1>
-        </div>
-
         <div class="mobile-menu">
-            <img src="imagenes/menuHamgur.png" alt="icono menu responsive">
+            <img src="imagenes/menu-gris.png" alt="menu responsive">
         </div>
 
         <div>
             <nav class="navegacion-principal flex contenedor">
-                <a href="/">Inicio</a>
+                <a href="/" class="subrayar">Inicio</a>
                 <a href="#proyectos">Proyectos</a>
-                <a href="#estudios"> Tech Stack </a>
+                <a href="#estudios"> Tecnologias </a>
                 <a href="https://github.com/yuliamonti" target="_blank"> Repositorio </a>
                 <a href="https://www.linkedin.com/in/yuliamonti/" target="_blank"> Linkedin </a>
-                <!--<a href="#contacto">Contacto</a>-->
             </nav>
         </div>
     </header>
 
     <section class="hero">
         <div class="contenido-hero">
-            <h2> FrontEnd, Estudiante de Full Stack </h2>
-            <!--Icono de tablericons-->
-            <a href="http://www.linkedin.com/in/yuliamonti" class="boton" target="_blank"> Contactar <img
-                    src="imagenes/linkedin.png" width="28" height="28" class="contactar"> </a>
+            <div class="titulo-yulia w-sm-100">
+                <h1 data-aos="zoom-in" class="titulo-yulia"> Yulia Monti
+                <br><span class="titulo contenedor animate__animated animate__backInRight"> Web Developer</span>
+                </h1>
+            </div>
+
+            <div>
+                <h2 data-aos="fade-right"> Front End</h2>
+                <a href="http://www.linkedin.com/in/yuliamonti" class="boton" target="_blank"> Contactar </a>
+            </div>
+
+            <div>
+                <a href="./html/sobre-mi.html"> <img data-aos="fade-left" src="imagenes/yuAstronauta.png" width="400" alt="Astronauta con la cara de Yulia, link sobre-mi" class="astronauta"></a>
+            </div>
+        </div>
     </section>
 
     <main>
         <section>
-            <h2>Proyectos</h2>
+            <h3>Proyectos</h3>
             <div id="proyectos">
 
                 <section data-aos="fade-up" class="proyecto contenedor w-sm-100">
                     <a href="https://yuliamonti.github.io/gif-api/" target="_blank">
-                        <img class="img-proyecto-sm" src="imagenes/gif-app-img.png" width="500" alt="Imagen de app gif">
-                    </a>
+                    <img class="img-proyecto-sm" src="imagenes/gif-app-img.png" width="500" alt="App buscadora de gifs"></a>
+                    
                     <div class="contenedor descripcionProyecto">
-                        <h3>Gif App</h3>
+                        <h4>Gif App</h4>
                         <p>App con buscador de Gifs</p>
-                        <p>Desde el buscador puedes elegir el Gif de la categoría que mas te guste. <br>Tecnología
-                            utilizada: React, Vite, Jest, Fetch y API.</p>
+                        <p>Desde el buscador podes elegir el Gif de la categoría que mas te guste. <br>
+                            Tecnología utilizada: React, Vite, Jest, Fetch y API.</p>
                     </div>
                 </section>
 
                 <section data-aos="fade-up" class="proyecto fd-r contenedor  w-sm-100">
                     <div class="contenedor descripcionProyecto">
-                        <h3>La Web de Skay Beilinson </h3>
+                        <h4>La Web de Skay Beilinson </h4>
                         <p>Página no oficial de Skay y los Fakires, banda de Rock Argentino.</p>
                         <p>Tecnología utilizada: Html, Sass y Gulp.</p>
                     </div>
+
                     <a href="https://yuliamonti.github.io/laWebDeSkay/" target="_blank">
-                        <img class="img-proyecto-sm" src="imagenes/cap-LaWebDeSkay-1.png" width="500"
-                            alt="Imagen de proyecto de La Web de Skay">
-                    </a>
+                    <img class="img-proyecto-sm" src="imagenes/cap-LaWebDeSkay-1.png" width="500" alt="Proyecto de La Web de Skay Beilinson, Banda de Rock Argentino, ex guitarrista de los redondos"> </a>
                 </section>
 
                 <section data-aos="fade-up" class="proyecto contenedor  w-sm-100">
                     <a href="https://yuliamonti.github.io/carple-monti/" target="_blank">
-                        <img class="img-proyecto-sm" src="imagenes/cap-Carple-1.png" width="500"
-                            alt="Imagen de proyecto de Carple Aberturas">
-                    </a>
+                    <img class="img-proyecto-sm" src="imagenes/cap-Carple-1.png" width="500" alt="Carple, fábrica de Aberturas"> </a>
+
                     <div class="contenedor descripcionProyecto">
-                        <h3>Carple Fábrica de Aberturas</h3>
+                        <h4>Carple Fábrica de Aberturas</h4>
                         <p>Página no oficial de Carple, Fábrica de Aberturas.</p>
                         <p>Tecnología utilizada: HTML y Css.</p>
                     </div>
@@ -92,55 +95,71 @@
 
                 <section data-aos="fade-up" class="proyecto fd-r contenedor  w-sm-100">
                     <div class="contenedor descripcionProyecto">
-                        <h3>Brok Electrónica</h3>
+                        <h4>Brok Electrónica</h4>
                         <p>Servicio Técnico Oficial de Samsung y Sony, Rosario, Santa Fé, Argetina.</p>
                         <p>Tecnología utilizada: WordPress.</p>
                     </div>
+
                     <a href="https://brokelectronica.com.ar/" target="_blank">
-                        <img class="img-proyecto-sm" src="imagenes/proyecto-brok.png" width="500"
-                            alt="Imagen de proyecto de Brok Electrónica">
-                    </a>
+                    <img class="img-proyecto-sm" src="imagenes/proyecto-brok.png" width="500" alt="Proyecto de Brok Electrónica, Servicio tecnico autorizado de Sony y Samsung"> </a>
                 </section>
+
             </div>
         </section>
     </main>
 
-    <h2 id="estudios"> Tech Stack</h2>
-    <section class="skills contenedor">
-        <img src="imagenes/html-5.png" width="60" alt="Icono">
-        <img src="imagenes/css.png" width="60" alt="Icono">
-        <img src="imagenes/javascript.png" width="60" alt="Icono">
-        <img src="imagenes/react.png" width="60" alt="Icono">
-        <img src="imagenes/php.png" width="60" alt="Icono">
-        <img src="imagenes/wordpress.png" width="60" alt="Icono">
-        <img src="imagenes/sass.png" width="60" alt="Icono">
-        <img src="imagenes/bootstrap-logo-shadow.png" width="60" alt="Icono">
-        <img src="imagenes/git.png" width="60" alt="Icono">
-        <img src="imagenes/github.png" width="60" alt="Icono">
-        <img src="imagenes/mysql.png" width="60" alt="Icono">
-        <img src="imagenes/mysql-.png" width="60" alt="Icono">
-        <img src="imagenes/nodejs.png" width="60" alt="Icono">
-        <img src="imagenes/gulp.png" width="60" alt="Icono">
-        <img src="imagenes/firebase-.png" width="50" alt="Icono">
-        <img src="imagenes/mondo-db.png" width="60" alt="Icono">
-        <img src="imagenes/netlify.png" width="60" alt="Icono">
-        <img src="imagenes/figma.png" width="60" alt="Icono">
-        <img src="imagenes/discord.png" width="60" alt="Icono">
-        <img src="imagenes/seo-search-symbol.png" width="60" alt="Icono">
-        <img src="imagenes/adwords.png" width="60" alt="Icono">
-        <img src="imagenes/canva.png" width="60" alt="Icono">
-        <img src="imagenes/photoshop-lightroom.png" width="60" alt="Icono">
-        <img src="imagenes/photoshop.png" width="60" alt="Icono">
+    <section>
+    <h3 id="estudios"> Tech Stack</h3>
+    <div class="skills contenedor w-sm-100">
+        <img src="imagenes/html-5.png" width="60" alt="Logotipo de HTML 5">
+        <img src="imagenes/css.png" width="60" alt="Logotipo de CSS">
+        <img src="imagenes/javascript.png" width="60" alt="Logotipo de JavaScript">
+        <img src="imagenes/react.png" width="60" alt="Logotipo de React Js">
+        <img src="imagenes/php.png" width="60" alt="Logotipo de PHP">
+        <img src="imagenes/wordpress.png" width="60" alt="Logotipo de WordPress">
+        <img src="imagenes/sass.png" width="60" alt="Logotipo de Sass">
+        <img src="imagenes/bootstrap-logo-shadow.png" width="60" alt="Logotipo de Bootstrap, frameworks">
+        <img src="imagenes/git.png" width="60" alt="Logotipo de Git">
+        <img src="imagenes/github.png" width="60" alt="Logotipo de GitHub">
+        <img src="imagenes/mysql.png" width="60" alt="Logotipo de MySql">
+        <img src="imagenes/mysql-.png" width="60" alt="Logotipo de MySql Workbench">
+        <img src="imagenes/nodejs.png" width="60" alt="Logotipo de Node js">
+        <img src="imagenes/gulp.png" width="60" alt="Logotipo de Gulp">
+        <img src="imagenes/firebase-.png" width="50" alt="Logotipo de Firebase">
+        <img src="imagenes/mondo-db.png" width="60" alt="Logotipo de Mongo DB">
+        <img src="imagenes/netlify.png" width="60" alt="Logotipo de Netlify">
+        <img src="imagenes/figma.png" width="60" alt="Logotipo de Figma">
+        <img src="imagenes/discord.png" width="60" alt="Logotipo de Discord">
+        <img src="imagenes/seo-search-symbol.png" width="60" alt="Icono de SEO ">
+        <img src="imagenes/adwords.png" width="60" alt="Logotipo de Google Adwords">
+        <img src="imagenes/canva.png" width="60" alt="Logotipo de Canva">
+        <img src="imagenes/photoshop-lightroom.png" width="60" alt="Logotipo de Photoshop">
+        <img src="imagenes/photoshop.png" width="60" alt="Logotipo de Lightroom">
+    </div>
     </section>
 
+    <section id="mas">
+        <div class="mas contenedor w-sm-100">
+            <div class="contenedor descripcion-sobre-mi w-sm-100">
+            <h4 data-aos="fade-left"> ¿Querés saber más sobre mi?</h4>
+            <a href="./html/sobre-mi.html" class="boton-sobre-mi"> Click Aquí </a>
+            <h4 data-aos="fade-left"> O contactame</h4>
+            <a href="http://www.linkedin.com/in/yuliamonti" class="boton-sobre-mi" target="_blank"> Click Aquí </a>
+        </div>
+
+        <div>
+            <a href="./html/sobre-mi.html"> <img src="imagenes/yuAstronauta-abstract-removebg.png" alt="Ilustración de astronauta con la cara de Yulia" class="astronauta-saber-mas"></a>
+        </div>
+    </div>
+    </section>
+    
     <div>
         <nav class="flex contenedor menuFooter">
             <a href="/">Inicio</a>
             <a href="#proyectos">Proyectos</a>
-            <a href="#estudios"> Tech Stack </a>
+            <a href="#estudios"> Tecnologias</a>
             <a href="https://github.com/yuliamonti" target="_blank"> Repositorio </a>
             <a href="https://www.linkedin.com/in/yuliamonti/" target="_blank"> Linkedin </a>
-            <!--<a href="#contacto">Contacto</a>-->
         </nav>
     </div>
     <footer class="footer">
@@ -149,7 +168,7 @@
 
     <script src="js/app.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script> AOS.init({ duration: 2500 }); </script>
+    <script> AOS.init({ duration: 2000 }); </script>
 </body>
 
 </html>
