--- a/html/sobre-mi.html
+++ b/html/sobre-mi.html
@@ -18,7 +18,7 @@
     <link href="../css/styles.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="sm">
     <header>
         <div>
             <nav class=" flex contenedor menuSM">
@@ -36,40 +36,32 @@
                     "Desarrollo Web Completo" en Udemy con Juan Pablo de la Torre Valdez. </p>
                 <br>
                 <h3> Estudios finalizados: </h3>
-                <p>
-                    Desarrollo Web: HTML, CSS, SASS, Git, GitHub,<br> Bootstrap, Sass, SEO.
-                    <br>
-                    JavaScript, Wordpress, Google Ads, Marketing Digital.
-                </p><br>
+                <p>Desarrollo Web: HTML, CSS, SASS, Git, GitHub Bootstrap, Sass, SEO. <br>
+                    JavaScript, Wordpress, Google Ads, Marketing Digital.</p>
+                <br>
                 <h3> Cursando:</h3>
                 <p>React Js, PHP, POO - MVC, MySQL - SQL y API's, Backend.</p>
                 <br>
                 <p>Aficionada a la Fotografía y al Diseño.
-                    <br><br>
-                    Soy una persona atenta a los detalles, apasionada por el código.
-                    <br>
-                    Soy capaz de afrontar retos y encontrar soluciones,
-                    <br>soy organizada, empática, responsable,
-                    pro-activa, con ganas de aportar, de trabajar y de aprender.
-                </p><br><br>
-                <p>Disponibilidad para Trabajo remoto o presencial.
-                    <br>
-                    Disponibilidad para cambiar de residencia.
-                    <br>
-                    Interesada en aprender idiomas.
+                <br>
+                Atenta a los detalles.
+                <br>
+                Capaz de afrontar retos y encontrar soluciones,
+                <br>Organizada, empática, responsable, pro-activa, con ganas de aportar, de trabajar y de aprender.</p>
+                <br>
+                <p>Disponibilidad para trabajo remoto.
+                <br>
+                Disponibilidad para cambiar de residencia.
+                <br>
+                Interesada en aprender idiomas.
                 </p>
+                <br>
+                <a href="http://www.linkedin.com/in/yuliamonti" class="boton-sm" target="_blank"> Contactar </a>
             </div>
-            <div>
-                <a href="../index.html"> <img src="../imagenes/yuAstronauta.png" width="400" height="auto"
-                        class="astronauta a-sobre-mi"></a>
-            </div>
-            <div class="contenedor">
-                <br><br>
-                <a href="http://www.linkedin.com/in/yuliamonti" class="boton" target="_blank"> Contactar </a>
-            </div>
+        </div>
     </section>
-    
-    <footer class="footer">
+
+    <footer class="footer sm">
         <p> &copy; Yulia Monti 2022 </p>
     </footer>
 </body>
