--- a/index.html
+++ b/index.html
@@ -37,19 +37,17 @@
 
     <section class="hero">
         <div class="contenido-hero">
-            <div class="titulo-yulia w-sm-100">
-                <h1 data-aos="zoom-in" class="titulo-yulia"> Yulia Monti
-                <br><span class="titulo contenedor animate__animated animate__backInRight"> Web Developer</span>
+            <div class="w-sm-100">
+                <h1 class="titulo-yulia"> Yulia Monti
+                    <br><span class="titulo contenedor animate__animated animate__backInRight"> Web Developer</span>
                 </h1>
-            </div>
-
-            <div>
-                <h2 data-aos="fade-right"> Front End</h2>
+                <h2> Front End</h2>
                 <a href="http://www.linkedin.com/in/yuliamonti" class="boton" target="_blank"> Contactar </a>
             </div>
 
             <div>
-                <a href="./html/sobre-mi.html"> <img data-aos="fade-left" src="imagenes/yuAstronauta.png" width="400" alt="Astronauta con la cara de Yulia, link sobre-mi" class="astronauta"></a>
+                <a href="./html/sobre-mi.html"> <img src="imagenes/yuAstronauta.png" width="400"
+                        alt="Astronauta con la cara de Yulia, link sobre-mi" class="astronauta"></a>
             </div>
         </div>
     </section>
@@ -61,8 +59,9 @@
 
                 <section data-aos="fade-up" class="proyecto contenedor w-sm-100">
                     <a href="https://yuliamonti.github.io/gif-api/" target="_blank">
-                    <img class="img-proyecto-sm" src="imagenes/gif-app-img.png" width="500" alt="App buscadora de gifs"></a>
-                    
+                        <img class="img-proyecto-sm" src="imagenes/gif-app-img.png" width="500"
+                            alt="App buscadora de gifs"></a>
+
                     <div class="contenedor descripcionProyecto">
                         <h4>Gif App</h4>
                         <p>App con buscador de Gifs</p>
@@ -79,12 +78,15 @@
                     </div>
 
                     <a href="https://yuliamonti.github.io/laWebDeSkay/" target="_blank">
-                    <img class="img-proyecto-sm" src="imagenes/cap-LaWebDeSkay-1.png" width="500" alt="Proyecto de La Web de Skay Beilinson, Banda de Rock Argentino, ex guitarrista de los redondos"> </a>
+                        <img class="img-proyecto-sm" src="imagenes/cap-LaWebDeSkay-1.png" width="500"
+                            alt="Proyecto de La Web de Skay Beilinson, Banda de Rock Argentino, ex guitarrista de los redondos">
+                    </a>
                 </section>
 
                 <section data-aos="fade-up" class="proyecto contenedor  w-sm-100">
                     <a href="https://yuliamonti.github.io/carple-monti/" target="_blank">
-                    <img class="img-proyecto-sm" src="imagenes/cap-Carple-1.png" width="500" alt="Carple, fábrica de Aberturas"> </a>
+                        <img class="img-proyecto-sm" src="imagenes/cap-Carple-1.png" width="500"
+                            alt="Carple, fábrica de Aberturas"> </a>
 
                     <div class="contenedor descripcionProyecto">
                         <h4>Carple Fábrica de Aberturas</h4>
@@ -101,7 +103,8 @@
                     </div>
 
                     <a href="https://brokelectronica.com.ar/" target="_blank">
-                    <img class="img-proyecto-sm" src="imagenes/proyecto-brok.png" width="500" alt="Proyecto de Brok Electrónica, Servicio tecnico autorizado de Sony y Samsung"> </a>
+                        <img class="img-proyecto-sm" src="imagenes/proyecto-brok.png" width="500"
+                            alt="Proyecto de Brok Electrónica, Servicio tecnico autorizado de Sony y Samsung"> </a>
                 </section>
 
             </div>
@@ -109,50 +112,53 @@
     </main>
 
     <section>
-    <h3 id="estudios"> Tech Stack</h3>
-    <div class="skills contenedor w-sm-100">
-        <img src="imagenes/html-5.png" width="60" alt="Logotipo de HTML 5">
-        <img src="imagenes/css.png" width="60" alt="Logotipo de CSS">
-        <img src="imagenes/javascript.png" width="60" alt="Logotipo de JavaScript">
-        <img src="imagenes/react.png" width="60" alt="Logotipo de React Js">
-        <img src="imagenes/php.png" width="60" alt="Logotipo de PHP">
-        <img src="imagenes/wordpress.png" width="60" alt="Logotipo de WordPress">
-        <img src="imagenes/sass.png" width="60" alt="Logotipo de Sass">
-        <img src="imagenes/bootstrap-logo-shadow.png" width="60" alt="Logotipo de Bootstrap, frameworks">
-        <img src="imagenes/git.png" width="60" alt="Logotipo de Git">
-        <img src="imagenes/github.png" width="60" alt="Logotipo de GitHub">
-        <img src="imagenes/mysql.png" width="60" alt="Logotipo de MySql">
-        <img src="imagenes/mysql-.png" width="60" alt="Logotipo de MySql Workbench">
-        <img src="imagenes/nodejs.png" width="60" alt="Logotipo de Node js">
-        <img src="imagenes/gulp.png" width="60" alt="Logotipo de Gulp">
-        <img src="imagenes/firebase-.png" width="50" alt="Logotipo de Firebase">
-        <img src="imagenes/mondo-db.png" width="60" alt="Logotipo de Mongo DB">
-        <img src="imagenes/netlify.png" width="60" alt="Logotipo de Netlify">
-        <img src="imagenes/figma.png" width="60" alt="Logotipo de Figma">
-        <img src="imagenes/discord.png" width="60" alt="Logotipo de Discord">
-        <img src="imagenes/seo-search-symbol.png" width="60" alt="Icono de SEO ">
-        <img src="imagenes/adwords.png" width="60" alt="Logotipo de Google Adwords">
-        <img src="imagenes/canva.png" width="60" alt="Logotipo de Canva">
-        <img src="imagenes/photoshop-lightroom.png" width="60" alt="Logotipo de Photoshop">
-        <img src="imagenes/photoshop.png" width="60" alt="Logotipo de Lightroom">
-    </div>
+        <h3 id="estudios"> Tech Stack</h3>
+        <div class="skills contenedor w-sm-100">
+            <img src="imagenes/html-5.png" width="60" alt="Logotipo de HTML 5">
+            <img src="imagenes/css.png" width="60" alt="Logotipo de CSS">
+            <img src="imagenes/javascript.png" width="60" alt="Logotipo de JavaScript">
+            <img src="imagenes/react.png" width="60" alt="Logotipo de React Js">
+            <img src="imagenes/php.png" width="60" alt="Logotipo de PHP">
+            <img src="imagenes/wordpress.png" width="60" alt="Logotipo de WordPress">
+            <img src="imagenes/sass.png" width="60" alt="Logotipo de Sass">
+            <img src="imagenes/bootstrap-logo-shadow.png" width="60" alt="Logotipo de Bootstrap, frameworks">
+            <img src="imagenes/git.png" width="60" alt="Logotipo de Git">
+            <img src="imagenes/github.png" width="60" alt="Logotipo de GitHub">
+            <img src="imagenes/mysql.png" width="60" alt="Logotipo de MySql">
+            <img src="imagenes/mysql-.png" width="60" alt="Logotipo de MySql Workbench">
+            <img src="imagenes/nodejs.png" width="60" alt="Logotipo de Node js">
+            <img src="imagenes/gulp.png" width="60" alt="Logotipo de Gulp">
+            <img src="imagenes/firebase-.png" width="50" alt="Logotipo de Firebase">
+            <img src="imagenes/mondo-db.png" width="60" alt="Logotipo de Mongo DB">
+            <img src="imagenes/netlify.png" width="60" alt="Logotipo de Netlify">
+            <img src="imagenes/figma.png" width="60" alt="Logotipo de Figma">
+            <img src="imagenes/discord.png" width="60" alt="Logotipo de Discord">
+            <img src="imagenes/seo-search-symbol.png" width="60" alt="Icono de SEO ">
+            <img src="imagenes/adwords.png" width="60" alt="Logotipo de Google Adwords">
+            <img src="imagenes/canva.png" width="60" alt="Logotipo de Canva">
+            <img src="imagenes/photoshop-lightroom.png" width="60" alt="Logotipo de Photoshop">
+            <img src="imagenes/photoshop.png" width="60" alt="Logotipo de Lightroom">
+        </div>
     </section>
 
     <section id="mas">
         <div class="mas contenedor w-sm-100">
             <div class="contenedor descripcion-sobre-mi w-sm-100">
-            <h4 data-aos="fade-left"> ¿Querés saber más sobre mi?</h4>
-            <a href="./html/sobre-mi.html" class="boton-sobre-mi"> Click Aquí </a>
-            <h4 data-aos="fade-left"> O contactame</h4>
-            <a href="http://www.linkedin.com/in/yuliamonti" class="boton-sobre-mi" target="_blank"> Click Aquí </a>
-        </div>
+                <h4 data-aos="fade-left"> ¿Querés saber más sobre mi?</h4>
+                <a href="./html/sobre-mi.html" class="boton-sobre-mi"> Click Aquí </a>
+                <h4 data-aos="fade-left"> O contactame</h4>
+                <a href="http://www.linkedin.com/in/yuliamonti" class="boton-sobre-mi" target="_blank"> Click Aquí </a>
+            </div>
 
-        <div>
-            <a href="./html/sobre-mi.html"> <img src="imagenes/yuAstronauta-abstract-removebg.png" alt="Ilustración de astronauta con la cara de Yulia" class="astronauta-saber-mas"></a>
+            <div>
+                <a href="./html/sobre-mi.html"> <img data-aos="zoom-in"
+                        src="imagenes/yuAstronauta-abstract-removebg.png"
+                        alt="Ilustración de astronauta con la cara de Yulia" width="400"
+                        class="astronauta-saber-mas"></a>
+            </div>
         </div>
-    </div>
     </section>
-    
+
     <div>
         <nav class="flex contenedor menuFooter">
             <a href="/">Inicio</a>
